# Game_SDL

./: CMakeLists.txt  README.md  demo.c  help.txt
cmake_helpers/: helpers_c.cmake
include/AI/: AI.h
include/Engine/: Engine.h  EngineConfigLoader.h
include/Engine/config/: EngineCfg.h
include/Game/: Game.h
include/Game/Battlefield/: Battlefield.h
include/Game/Entities/: Hero.h  HeroBase.h  Island_Boy.h  Robot.h  Terrorist.h  Tower.h  Troll.h  Troll_1.h  Wheel.h
include/Game/Entities/Buttons/: GameButton.h  IslandBoyButton.h  WheelButton.h
include/Game/config/: GameCfg.h
include/Game/proxies/: GameInterface.h
include/common/: CommonDefines.h  TerroristDefines.h  TimerDefines.h
include/containers/: VectorHero.h
manager_utils/: CMakeLists.txt
manager_utils/include/manager_utils/common/: DebugConsole.h
manager_utils/include/manager_utils/drawing/: Image.h  Text.h  Widget.h
manager_utils/include/manager_utils/input/: Button.h
manager_utils/include/manager_utils/managers/: DrawMgr.h  DrawMgrProxy.h  ManagerHandler.h  ResourceMngr.h  ResourceMngrProxy.h  TimerMgr.h
manager_utils/include/manager_utils/managers/config/: DrawMgrCfg.h  ManagerHandlerCfg.h  ResourceMngrCfg.h  TimerMgrConfig.h
manager_utils/include/manager_utils/time/: TimerClient.h  TimerClientStructs.h
manager_utils/src/common/: DebugConsole.c
manager_utils/src/drawing/: Image.c  Text.c  Widget.c
manager_utils/src/input/: Button.c
manager_utils/src/managers/: DrawMgr.c  ManagerHandler.c  ResourceMngr.c  TimerMgr.c
manager_utils/src/time/: TimerClient.c  TimerClientStructs.c
sdl_utils/: CMakeLists.txt
sdl_utils/include/sdl_utils/: InputEvent.h  MonitorWindow.h  Renderer.h  SDL_loader.h  Texture.h
sdl_utils/include/sdl_utils/config/: ImageContainerCfg.h  MonitorWindowCfg.h  TextContainerCfg.h
sdl_utils/include/sdl_utils/containers/: ImageContainer.h  TextContainer.h
sdl_utils/src/: InputEvent.c  MonitorWindow.c  Renderer.c  SDL_loader.c  Texture.c
sdl_utils/src/config/: ImageContainerCfg.c  TextContainerCfg.c
sdl_utils/src/containers/: ImageContainer.c  TextContainer.c
src/: main.c
src/AI/: AI.c
src/Engine/: Engine.c  EngineConfigLoader.c
src/Game/: Game.c
src/Game/Battlefield/: Battlefield.c
src/Game/Entities/: Hero.c  HeroBase.c  Island_Boy.c  Terrorist.c  Tower.c  Troll_1.c  Wheel.c
src/Game/Entities/Buttons/: GameButton.c  IslandBoyButton.c  WheelButton.c
src/containers/: VectorHero.c
utils/: CMakeLists.txt
utils/include/utils/: ContainerOf.h
utils/include/utils/containers/: Vector.h  VectorInt.h
utils/include/utils/drawing/: Color.h  DrawParams.h  Point.h  Rectangle.h
utils/include/utils/input/: EventDefines.h
utils/include/utils/thread/: Thread.h
utils/include/utils/time/: Time.h
utils/src/containers/: Vector.c  VectorInt.c
utils/src/drawing/: Color.c  DrawParams.c  Point.c  Rectangle.c
utils/src/thread/: Thread.c
utils/src/time/: Time.c
